--- a/index.html
+++ b/index.html
@@ -507,11 +507,33 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-conteiner">
+          <p class="social-media-footer">Subscribe</p>
+          <form
+            class="futer-form"
+            name="footer-subscribe-form"
+            autocomplete="off"
+          >
+            <input
+              class="footer-input"
+              type="text"
+              name="email-address"
+              placeholder="E-mail"
+            />
+            <button class="footer-subscribe-button" type="submit">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-footer-button"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="close-button" type="button" data-modal-close>
+        <button class="close-button button" type="button" data-modal-close>
           <svg class="modal-close-button" width="8" height="8">
             <use href="./images/icons.svg#icon-close-button"></use>
           </svg>
