--- a/index.html
+++ b/index.html
@@ -533,6 +533,29 @@
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
+        <form>
+          <fieldset>
+            <legend>Leave your contacts and we will call you back</legend>
+            <label>
+              Name
+              <input type="text" name="name" placeholder="" checked />
+            </label>
+            <label>
+              Phone
+              <input type="tel" name="phone" placeholder="" />
+            </label>
+            <label>
+              Email
+              <input type="email" name="email" placeholder="" />
+            </label>
+            <label>
+              Comment
+              <textarea name="comment" rows="5" placeholder="Text input">
+              </textarea>
+            </label>
+            <button type="submit">Send</button>
+          </fieldset>
+        </form>
         <button class="close-button button" type="button" data-modal-close>
           <svg class="modal-close-button" width="8" height="8">
             <use href="./images/icons.svg#icon-close-button"></use>
