--- a/index.html
+++ b/index.html
@@ -533,76 +533,78 @@ a<!DOCTYPE html>
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <form class="form">
-          <fieldset class="form-group">
-            <legend class="group-title">
-              Leave your contacts and we will call you back
-            </legend>
-            <label class="form-label" for="name">
-              Name
-              <div class="name-div">
-                <svg class="name-icon" width="18" height="18">
-                  <use href="./images/icons.svg#icon-person"></use>
-                </svg>
-                <input
+        <form class="modal-form">
+          <legend class="modal-title">
+            Leave your contacts and we will call you back
+          </legend>
+          <div class="modal-field">
+            <label class="modal-label" for="name">Name</label>
+            <div class="modal-input-wrap">
+              <input
                   class="form-input"
                   type="text"
                   name="name"
-                  placeholder=""
                   id="name"
-                />
-              </div>
-            </label>
-            <label class="form-label">
-              Phone
-              <div class="name-div">
-                <svg class="name-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-phone"></use>
-                </svg>
-                <input
+                  required
+              />
+              <svg class="modal-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div> 
+          <div class="modal-field">
+            <label class="modal-label" for="phone">Phone</label>
+            <div class="modal-input-wrap">
+              <input
                   class="form-input"
                   type="tel"
                   name="phone"
-                  placeholder=""
-                />
-              </div>
-            </label>
-            <label class="form-label">
-              Email
-              <div class="name-div">
-                <svg class="name-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-email"></use>
-                </svg>
-                <input
+                  id="phone"
+                  required
+              />
+              <svg class="modal-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label class="modal-label" for="email">Email</label>
+            <div class="modal-input-wrap">
+              <input
                   class="form-input"
                   type="email"
                   name="email"
-                  placeholder=""
-                />
-              </div>
-            </label>
-            <label class="form-label">
-              Comment
+                  id="email"
+              />
+              <svg class="modal-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label class="modal-label" for="comment">Comment</label>
               <textarea
                 class="textarea"
                 name="comment"
-                rows="5"
                 placeholder="Text input"
-              >
-              </textarea>
+                id="comment"
+              ></textarea>
+          </div>
+          <div class="check hidden">
+            <label class="privacy-policy" for="privacy-policy">I accept the terms and conditions of the
+              <span><a class="privacy-policy-link" href="">Privacy Policy</a>
+              </span>
             </label>
-            <label>
-              <input
+            <input
                 class="check-input"
                 type="checkbox"
                 name="privacy-policy"
                 value="accept"
-              />
-              I accept the terms and conditions of the
-              <span><a href="">Privacy Policy</a></span>
-            </label>
-            <button class="submit-button button" type="submit">Send</button>
-          </fieldset>
+                id="privacy-policy"
+            />  
+          </div>
+          
+          <button class="submit-button button" type="submit">Send</button>
         </form>
         <button class="close-button button" type="button" data-modal-close>
           <svg class="modal-close-button" width="8" height="8">
