--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-a<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -541,26 +541,26 @@ a<!DOCTYPE html>
             <label class="modal-label" for="name">Name</label>
             <div class="modal-input-wrap">
               <input
-                  class="form-input"
-                  type="text"
-                  name="name"
-                  id="name"
-                  required
+                class="form-input"
+                type="text"
+                name="name"
+                id="name"
+                required
               />
               <svg class="modal-input-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
-          </div> 
+          </div>
           <div class="modal-field">
             <label class="modal-label" for="phone">Phone</label>
             <div class="modal-input-wrap">
               <input
-                  class="form-input"
-                  type="tel"
-                  name="phone"
-                  id="phone"
-                  required
+                class="form-input"
+                type="tel"
+                name="phone"
+                id="phone"
+                required
               />
               <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
@@ -570,12 +570,7 @@ a<!DOCTYPE html>
           <div class="modal-field">
             <label class="modal-label" for="email">Email</label>
             <div class="modal-input-wrap">
-              <input
-                  class="form-input"
-                  type="email"
-                  name="email"
-                  id="email"
-              />
+              <input class="form-input" type="email" name="email" id="email" />
               <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
@@ -583,27 +578,32 @@ a<!DOCTYPE html>
           </div>
           <div class="modal-field">
             <label class="modal-label" for="comment">Comment</label>
-              <textarea
-                class="textarea"
-                name="comment"
-                placeholder="Text input"
-                id="comment"
-              ></textarea>
+            <textarea
+              class="textarea"
+              name="comment"
+              placeholder="Text input"
+              id="comment"
+            ></textarea>
           </div>
-          <div class="check hidden">
-            <label class="privacy-policy" for="privacy-policy">I accept the terms and conditions of the
-              <span><a class="privacy-policy-link" href="">Privacy Policy</a>
-              </span>
-            </label>
+          <div class="check modal-field">
             <input
-                class="check-input"
-                type="checkbox"
-                name="privacy-policy"
-                value="accept"
-                id="privacy-policy"
-            />  
+              class="check-input visually-hidden"
+              type="checkbox"
+              name="privacy-policy"
+              value="true"
+              id="privacy-policy"
+            />
+            <label class="privacy-policy" for="privacy-policy">
+              <span class="check-accept">
+                <svg class="check-icon" width="10" hight="8">
+                  <use href="./images/icons.svg#icon-checkbox"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="privacy-policy-link" href="">Privacy Policy</a>
+            </label>
           </div>
-          
+
           <button class="submit-button button" type="submit">Send</button>
         </form>
         <button class="close-button button" type="button" data-modal-close>
