--- a/index.html
+++ b/index.html
@@ -533,10 +533,8 @@
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
+        <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
-          <legend class="modal-title">
-            Leave your contacts and we will call you back
-          </legend>
           <div class="modal-field">
             <label class="modal-label" for="name">Name</label>
             <div class="modal-input-wrap">
@@ -595,7 +593,7 @@
             />
             <label class="privacy-policy" for="privacy-policy">
               <span class="check-accept">
-                <svg class="check-icon" width="10" hight="8">
+                <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-checkbox"></use>
                 </svg>
               </span>
