--- a/portfolio.html
+++ b/portfolio.html
@@ -339,6 +339,27 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-conteiner">
+          <p class="social-media-footer">Subscribe</p>
+          <form
+            class="futer-form"
+            name="footer-subscribe-form"
+            autocomplete="off"
+          >
+            <input
+              class="footer-input"
+              type="text"
+              name="email-address"
+              placeholder="E-mail"
+            />
+            <button class="footer-subscribe-button" type="submit">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-footer-button"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
