--- a/portfolio.html
+++ b/portfolio.html
@@ -346,13 +346,15 @@
             name="footer-subscribe-form"
             autocomplete="off"
           >
-            <input
-              class="footer-input"
-              type="text"
-              name="email-address"
-              placeholder="E-mail"
-            />
-            <button class="footer-subscribe-button" type="submit">
+            <label class="footer-label">
+              <input
+                class="footer-input"
+                type="email"
+                name="email-address"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="footer-subscribe-button button" type="submit">
               Subscribe
               <svg class="subscribe-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-footer-button"></use>
