--- a/index.html
+++ b/index.html
@@ -543,16 +543,16 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="modal-field">
-            <label class="modal-label" for="name">Name</label>
+            <label class="modal-label" for="user-name">Name</label>
             <div class="modal-input-wrap">
               <input
                 class="form-input"
                 type="text"
-                name="name"
-                id="name"
+                name="user-name"
+                id="user-name"
                 required
               />
-              <svg class="modal-input-icon" width="18" height="18">
+              <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -582,23 +582,23 @@
             </div>
           </div>
           <div class="modal-field">
-            <label class="modal-label" for="comment">Comment</label>
+            <label class="modal-label" for="user-comment">Comment</label>
             <textarea
               class="textarea"
-              name="comment"
+              name="user-comment"
               placeholder="Text input"
-              id="comment"
+              id="user-comment"
             ></textarea>
           </div>
           <div class="check modal-field">
             <input
               class="check-input visually-hidden"
               type="checkbox"
-              name="privacy-policy"
+              name="user-privacy"
               value="true"
-              id="privacy-policy"
+              id="user-privacy"
             />
-            <label class="privacy-policy" for="privacy-policy">
+            <label class="privacy-policy" for="user-privacy">
               <span class="check-accept">
                 <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-checkbox"></use>
@@ -608,7 +608,6 @@
               <a class="privacy-policy-link" href="">Privacy Policy</a>
             </label>
           </div>
-
           <button class="submit-button button" type="submit">Send</button>
         </form>
       </div>
