--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-field">
+          <div class="comment modal-field">
             <label class="modal-label" for="user-comment">Comment</label>
             <textarea
               class="textarea"
